# Evolutionary_cellular_automata

./: .gitignore  CMakeLists.txt  README.md
include/concept/: class_object_map.h  commands  commands.h  enum_map.h  policies.h
include/kernel/CPU_kernel/: creature.h  entity.h  extractor.h
settings/: compile_time_settings.h
src/: main.cpp
